--- a/scss/partials/_content-design.scss
+++ b/scss/partials/_content-design.scss
@@ -15,6 +15,11 @@ a:active {
 
 
 /* ===================================================================== HEADERS */
+.brand-logo{
+	background-color: #3b67b2;
+	padding: 0.5em 1em;
+	margin-bottom: 1em;
+}
 
 .page-header {
 	font-size: 22px;
