Update _interface.scss to remove unit on body line height

--- a/sass/partials/_interface.scss
+++ b/sass/partials/_interface.scss
@@ -20,7 +20,7 @@ body {
 	color: $primary-text-color;
 	font-family: $primary-font;
 	font-size: 14px;
-	line-height: 1.5em;
+	line-height: 1.5;
 	margin: 0;
 	padding: 0;
 }
