myr - added skip nav link for accessibility

--- a/sass/partials/_content-design.scss
+++ b/sass/partials/_content-design.scss
@@ -13,6 +13,10 @@ a:active {
 	}
 }
 
+.visually-hidden {
+	@extend %visuallyhidden;
+}
+
 
 /* ===================================================================== HEADERS */
 
