--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -60,6 +60,21 @@ $fix-mqs: false !default;
 }
 
 
+/* content mixins */
+
+// Clearfix - use like this ".foo { @extend %clearfix }
+%clearfix {
+	*zoom: 1;
+	
+	&:before, &:after {
+		content: " ";
+		display: table;
+	}
+	
+  	&:after {
+    	clear: both;
+  	}
+}
 
 
 
